# Sentinel2_Extractor

./: .gitignore  .replit  Background_Data_Extraction.ipynb  Multi_Year_ProductivityRaster.ipynb  NDVI_Mean_and_St_Dev_Bell_Curve_V1.ipynb  Precipitation_Context_Analysis.ipynb  README.md  Reclamation_Analysis_AEF.ipynb  Reclamation_Analysis_AEFv2.ipynb  Reclamation_Analysis_AEFv3.ipynb  Reclamation_Analysis_AEFv4.ipynb  Reclamation_Analysis_AEFv4_working.ipynb  Reclamation_Assessment_Robust_Z_Score.ipynb  Reclamation_Assessment_Z_Score_Enhanced.ipynb  Sentinel2_RasterExtractor.ipynb  fix_embeddings.py  fix_notebook_comprehensive.py  integrate_precipitation.py  integration_example.py  jupyter_config.py  precipitation_analysis.py  pyproject.toml  replit.md
attached_assets/: Pasted-Running-SIMPLIFIED-lease-vs-field-analysis-This-compares-the-lease-area-directly-to-the-surrou-1762353755098_1762353755099.txt  Pasted-Running-SIMPLIFIED-lease-vs-field-analysis-This-compares-the-lease-area-directly-to-the-surround-1762355125285_1762355125286.txt  Pasted-Running-reclamation-analysis-Processing-2017-Spring-Wheat-Extracting-lease-embeddi-1762347298316_1762347298321.txt  Pasted-Running-reclamation-analysis-Processing-2017-Spring-Wheat-Extracting-lease-embeddi-1762356826065_1762356826066.txt  zscore_summary_statistics_1763146236830.csv
