[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=1.6.12",
    "fiona>=1.10.1",
    "geemap>=0.36.5",
    "geopandas>=1.1.1",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.9",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "rasterio>=1.4.3",
    "shapely>=2.1.2",
]
